# task-manager-service/src/main/java/com/paxier/task_manager_service/model/TaskWatcherEntity.java
@@ -1,0 +1,33 @@
+package com.paxier.task_manager_service.model;
+
+import jakarta.persistence.Entity;
+import jakarta.persistence.FetchType;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
+import jakarta.persistence.Table;
+import java.util.UUID;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+
+@Entity
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+@Getter
+@Table(name = "task_watcher", schema = "task")
+public class TaskWatcherEntity {
+  @Id
+  @GeneratedValue(strategy = GenerationType.UUID)
+  UUID id;
+
+  String email;
+
+  @ManyToOne(fetch = FetchType.LAZY)
+  @JoinColumn(name = "task_id")
+  private TaskEntity task;
+}
